Rate , mobile top up api work done

--- a/CSipSimple/res/values/strings.xml
+++ b/CSipSimple/res/values/strings.xml
@@ -120,7 +120,9 @@
     
        <!-- Login page -->
        
-        <string name="balance">Transaction Confirmation</string>
+        <string name="balance">Mobile Top-
+            
+            up</string>
     <string name="balance_desc"></string>
        
        
